Made few changes in the code

--- a/Epidemic to Pandemic-COVID-19 Data Visualization.ipynb
+++ b/Epidemic to Pandemic-COVID-19 Data Visualization.ipynb
@@ -2224,6 +2224,7 @@
    ],
    "source": [
     "#Select one record per district\n",
+    "#Selecting records where both Raingauge Station and District are equal\n",
     "\n",
     "kerala_latlong1 = kerala_latlong.loc[kerala_latlong[\"Raingauge Station\"] == kerala_latlong[\"District\"]]\n",
     "kerala_latlong1.head(14)"
